--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -71,6 +71,65 @@
   }
 }
 
+.project-card {
+  background-color: #fac8c4; /* temporary */
+  border-radius: 6px;
+  display: flex;
+  flex-direction: column-reverse;
+  padding: var(--spacing-unit-medium);
+
+  &:not(:last-of-type) {
+    margin-bottom: var(--spacing-unit-medium);
+  }
+
+  @media (--md-viewport) {
+    align-items: end;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: var(--spacing-unit);
+
+    &:not(:last-of-type) {
+      margin-bottom: var(--spacing-unit);
+    }
+  }
+}
+
+.project-meta {
+  flex-shrink: 0;
+
+  ul {
+    color: var(--colour-5);
+    display: flex;
+    font-size: smaller;
+  }
+
+  li:not(:last-of-type)::after {
+    content: "•";
+    margin: 0 var(--spacing-unit-small);
+  }
+
+  @media (--md-viewport) {
+    flex-basis: 30%;
+    margin-right: var(--spacing-unit);
+  }
+}
+
+.project-image {
+  background-color: var(--colour-1);
+  border-radius: inherit;
+  display: flex;
+  margin-bottom: var(--spacing-unit);
+  padding: var(--spacing-unit-medium);
+
+  img {
+    border-radius: inherit;
+  }
+
+  @media (--md-viewport) {
+    margin-bottom: 0;
+  }
+}
+
 .footer {
   align-items: center;
   display: flex;
