--- a/src/styles/baseline.css
+++ b/src/styles/baseline.css
@@ -55,7 +55,6 @@ h4,
 h5,
 h6 {
   font-weight: 600;
-  line-height: 1.4;
 }
 
 h1 {
@@ -107,4 +106,13 @@ dl {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+/**
+ * Make images responsive by default.
+ */
+
+img {
+  block-size: auto;
+  max-width: 100%;
 }
