Make project cards block-level links

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,7 +49,9 @@ const projects = await getCollection('projects');
 					<li class="project-card">
 						<div class="project-meta">
 							<h3 class="h4">
-								{data.title}
+								<a href={data.link}>
+									{data.title}
+								</a>
 							</h3>
 							<ul>
 								{data.tags.map((tag) => <li>{tag}</li>)}
