--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -77,6 +77,16 @@
   display: flex;
   flex-direction: column-reverse;
   padding: var(--spacing-unit-medium);
+  position: relative;
+
+  a::after {
+    bottom: 0;
+    content: "";
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
 
   &:not(:last-of-type) {
     margin-bottom: var(--spacing-unit-medium);
