--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -16,7 +16,7 @@
   flex-direction: column;
   justify-content: center;
   min-height: 80vh;
-  padding: var(--spacing-unit-large) 0;
+  padding: var(--spacing-unit) 0;
 
   h1 {
     letter-spacing: 0.025em;
@@ -72,7 +72,7 @@
 }
 
 .project-card {
-  background-color: #fac8c4; /* temporary */
+  background-color: var(--project-card-bg);
   border-radius: 6px;
   display: flex;
   flex-direction: column-reverse;
@@ -86,6 +86,10 @@
     position: absolute;
     right: 0;
     top: 0;
+  }
+
+  &[data-theme="high-contrast"] {
+    color: var(--colour-1);
   }
 
   &:not(:last-of-type) {
@@ -105,10 +109,10 @@
 }
 
 .project-meta {
+  color: currentColor;
   flex-shrink: 0;
 
   ul {
-    color: var(--colour-5);
     display: flex;
     font-size: smaller;
   }
