Fix broken image styling

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -146,6 +146,7 @@
   border-radius: inherit;
   display: flex;
   margin-bottom: var(--spacing-unit);
+  overflow: hidden;
   padding: var(--spacing-unit-medium);
 
   img {
