--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -5,13 +5,31 @@
    * Colours.
    */
 
-  --colour-1: #ffffff;
-  --colour-2: #191919;
-  --colour-3: #767676;
-  --colour-4: #e6e6e6;
-  --colour-5: #272b3b;
-  --colour-6: #dec38b;
-  --colour-7: #a8000b;
+  --colour-white: #ffffff;
+
+  --colour-blue-50: #f6f7f9;
+  --colour-blue-100: #ecedf2;
+  --colour-blue-200: #d5d7e2;
+  --colour-blue-300: #b1b7c8;
+  --colour-blue-400: #868faa;
+  --colour-blue-500: #677190;
+  --colour-blue-600: #525a77;
+  --colour-blue-700: #454b63;
+  --colour-blue-800: #3a3f52;
+  --colour-blue-900: #343746;
+  --colour-blue-950: #22242f;
+
+  --colour-pink-50: #fef1f8;
+  --colour-pink-100: #fde6f3;
+  --colour-pink-200: #fdcde7;
+  --colour-pink-300: #fda4d2;
+  --colour-pink-400: #fb6bb3;
+  --colour-pink-500: #f652a0;
+  --colour-pink-600: #e51d72;
+  --colour-pink-700: #c70f58;
+  --colour-pink-800: #a41049;
+  --colour-pink-900: #891240;
+  --colour-pink-950: #540322;
 
   /**
    * Widths.
