--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -24,48 +24,51 @@
 
   p {
     align-items: center;
-    color: var(--colour-3);
+    color: var(--colour-blue-700);
     display: flex;
     margin-bottom: var(--spacing-unit-large);
 
     &::before {
-      background-color: var(--colour-6);
+      background-color: var(--colour-pink-500);
       border-radius: 4px;
       content: "";
       display: inline-block;
       height: 2px;
       margin-right: var(--spacing-unit-small);
-      width: 3ch;
+      width: 4ch;
     }
   }
 
   ul {
-    color: var(--colour-3);
+    color: var(--colour-blue-600);
     display: flex;
     font-size: smaller;
     gap: var(--spacing-unit);
   }
 
   a {
-    border-bottom: 1px solid var(--colour-4);
-    position: relative;
+    @media (hover: hover) {
+      padding-bottom: var(--spacing-unit-tiny);
+      position: relative;
 
-    &::after {
-      border-bottom: 1px solid var(--colour-3);
-      content: "";
-      display: block;
-      left: 0;
-      position: absolute;
-      transform: scaleX(0);
-      /* transform-origin: left center; */
-      transition: transform 0.3s ease;
-      top: 100%;
-      width: 100%;
-    }
-
-    &:hover {
       &::after {
-        transform: scaleX(1);
+        background-color: var(--colour-blue-200);
+        content: "";
+        height: 2px;
+        left: 0;
+        opacity: 0;
+        position: absolute;
+        transform: translateY(0.25em);
+        transition: all 0.3s ease;
+        top: 100%;
+        width: 100%;
+      }
+
+      &:hover {
+        &::after {
+          opacity: 1;
+          transform: translateY(0);
+        }
       }
     }
   }
@@ -80,7 +83,7 @@
   position: relative;
 
   &[data-theme="high-contrast"] {
-    color: var(--colour-1);
+    color: var(--colour-white);
   }
 
   &:not(:last-of-type) {
@@ -142,7 +145,7 @@
 }
 
 .project-image {
-  background-color: var(--colour-1);
+  background-color: var(--colour-white);
   border-radius: inherit;
   display: flex;
   margin-bottom: var(--spacing-unit);
@@ -176,14 +179,18 @@
     --icon-link-size: 44px;
 
     align-items: center;
+    border-radius: 4px;
     display: inline-flex;
     height: var(--icon-link-size);
     justify-content: center;
-    transition: color 0.3s ease;
     width: var(--icon-link-size);
 
-    &:hover {
-      color: var(--colour-6);
+    @media (hover: hover) {
+      transition: background-color 0.3s ease;
+
+      &:hover {
+        background-color: var(--colour-blue-100);
+      }
     }
   }
 }
