Remove link :after hover effect on focus

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -70,6 +70,12 @@
           transform: translateY(0);
         }
       }
+
+      &:focus-visible {
+        &::after {
+          display: none;
+        }
+      }
     }
   }
 }
