Tidy up and improve easings for transitions

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ const projects = await getCollection('projects');
       </ul>
     </section>
     <section class="spacing-huge">
-      <h2 class="spacing-base">Projects</h2>
+      <h2 class="spacing-large">Projects</h2>
       <ul>
         {projects.map(({ data: { title, link, tags, images, theme } }) => (
           <li
