--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -59,7 +59,7 @@
         opacity: 0;
         position: absolute;
         transform: translateY(0.25em);
-        transition: all 0.3s ease;
+        transition: all 400ms cubic-bezier(0.19, 1, 0.22, 1);
         top: 100%;
         width: 100%;
       }
@@ -108,7 +108,7 @@
   }
 
   @media (hover: hover) {
-    transition: transform 0.3s ease;
+    transition: transform 200ms ease;
     will-change: transform;
 
     &:hover {
@@ -257,31 +257,4 @@
 
 .spacing-huge {
   margin-bottom: var(--spacing-unit-huge);
-}
-
-.spacing-auto {
-  margin-bottom: auto;
-}
-
-.spacing-none {
-  margin-bottom: 0;
-}
-
-/**
- * Hide visually but make content available to screen readers: https://shorturl.at/jOW47
- *
- * 1. For long content, line feeds are not interpreted as spaces and small width
- *	  causes content to wrap 1 word per line: https://shorturl.at/cpu27
- */
-
-.sr-only {
-  border: 0;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  width: 1px;
-  white-space: nowrap; /* [1] */
 }
