--- a/src/styles/baseline.css
+++ b/src/styles/baseline.css
@@ -4,7 +4,7 @@
 
 html {
   box-sizing: border-box;
-  color: var(--colour-blue-950);
+  color: var(--color-blue-950);
   font-family: var(--font-sans);
   font-size: var(--font-size-6);
   font-size: clamp(var(--font-size-6), 2.5vw, var(--font-size-5));
@@ -20,7 +20,7 @@ html {
 }
 
 body {
-  background-color: var(--colour-white);
+  background-color: var(--color-white);
   overflow-x: hidden;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -39,7 +39,7 @@ h5,
 h6,
 p {
   padding: 0;
-  margin: 0 0 var(--base-spacing-unit) 0;
+  margin: 0;
 }
 
 h1,
