--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,10 +17,11 @@
   min-height: 80vh;
   padding: var(--gap) 0;
 
-  p {
+  h2 {
     align-items: center;
     color: var(--color-blue-700);
     display: flex;
+    font-weight: 400;
     margin-bottom: calc(var(--fluid-gap) * 2);
 
     &::before {
@@ -36,7 +37,7 @@
   ul {
     color: var(--color-blue-600);
     display: flex;
-    font-size: smaller;
+    font-size: var(--font-size-sm);
     gap: var(--fluid-gap);
   }
 
@@ -128,7 +129,7 @@
 
   ul {
     display: flex;
-    font-size: smaller;
+    font-size: var(--font-size-sm);
   }
 
   li:not(:last-of-type)::after {
@@ -156,7 +157,7 @@
 .footer {
   align-items: center;
   display: flex;
-  font-size: smaller;
+  font-size: var(--font-size-sm);
   justify-content: space-between;
   padding-top: calc(var(--fluid-gap) * 6);
   padding-bottom: var(--gap);
@@ -193,27 +194,27 @@
  */
 
 .h1 {
-  font-size: clamp(var(--font-size-3), 4.5vw, var(--font-size-1));
+  font-size: var(--font-size-xxxl);
 }
 
 .h2 {
-  font-size: clamp(var(--font-size-4), 4.5vw, var(--font-size-2));
+  font-size: var(--font-size-xxl);
 }
 
 .h3 {
-  font-size: clamp(var(--font-size-5), 4.5vw, var(--font-size-3));
+  font-size: var(--font-size-xl);
 }
 
 .h4 {
-  font-size: clamp(var(--font-size-6), 4.5vw, var(--font-size-4));
+  font-size: var(--font-size-lg);
 }
 
 .h5 {
-  font-size: clamp(var(--font-size-7), 4.5vw, var(--font-size-5));
+  font-size: var(--font-size-md);
 }
 
 .h6 {
-  font-size: clamp(var(--font-size-8), 4.5vw, var(--font-size-6));
+  font-size: var(--font-size-base);
 }
 
 /**
