--- a/src/styles/baseline.css
+++ b/src/styles/baseline.css
@@ -6,7 +6,7 @@ html {
   box-sizing: border-box;
   color: var(--color-blue-950);
   font-family: var(--font-sans);
-  font-size: clamp(var(--font-size-6), 2.5vw, var(--font-size-5));
+  font-size: var(--font-size-base);
   line-height: var(--base-line-height);
   letter-spacing: 0.025em;
   min-height: 100%;
@@ -48,30 +48,31 @@ h4,
 h5,
 h6 {
   font-weight: 600;
+  line-height: 1.4;
 }
 
 h1 {
-  font-size: clamp(var(--font-size-3), 4.5vw, var(--font-size-1));
+  font-size: var(--font-size-xxxl);
 }
 
 h2 {
-  font-size: clamp(var(--font-size-4), 4.5vw, var(--font-size-2));
+  font-size: var(--font-size-xxl);
 }
 
 h3 {
-  font-size: clamp(var(--font-size-5), 4.5vw, var(--font-size-3));
+  font-size: var(--font-size-xl);
 }
 
 h4 {
-  font-size: clamp(var(--font-size-6), 4.5vw, var(--font-size-4));
+  font-size: var(--font-size-lg);
 }
 
 h5 {
-  font-size: clamp(var(--font-size-7), 4.5vw, var(--font-size-5));
+  font-size: var(--font-size-md);
 }
 
 h6 {
-  font-size: clamp(var(--font-size-8), 4.5vw, var(--font-size-6));
+  font-size: var(--font-size-base);
 }
 
 ::selection {
